@@ -17,6 +17,7 @@ Makefile.PL
 MANIFEST			This list of files
 META.yml
 PYX.pm
+PYX/Format.pm
 PYX/Parser.pm
 pyx_examples/ex1.pyx
 pyx_examples/ex2.pyx
@@ -44,6 +45,8 @@ t/data/tag1.pyx
 t/data/tag2.pyx
 t/data/tag3.pyx
 t/data/tag4.pyx
+t/PYX-Format/01-use.t
+t/PYX-Format/02-version.t
 t/PYX-Parser/01-use.t
 t/PYX-Parser/02-version.t
 t/PYX-Parser/03-new.t
@@ -56,6 +59,8 @@ t/PYX/04-start_element.t
 t/PYX/05-end_element.t
 t/PYX/06-instruction.t
 t/PYX/07-comment.t
+xt/PYX-Format/01-pod_coverage.t
+xt/PYX-Format/02-pod.t
 xt/PYX-Parser/01-pod_coverage.t
 xt/PYX-Parser/02-pod.t
 xt/PYX/01-pod_coverage.t
