@@ -1,0 +1,10 @@
+# Pragmas.
+use strict;
+use warnings;
+
+# Modules.
+use Test::NoWarnings;
+use Test::Pod::Coverage 'tests' => 2;
+
+# Test.
+pod_coverage_ok('PYX::Format', 'PYX::Format is covered.');
